--- a/css/styles.css
+++ b/css/styles.css
@@ -10958,14 +10958,14 @@ header.masthead .masthead-subheading {
   font-style: italic;
   line-height: 1.5rem;
   margin-bottom: 25px;
-  font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Nanum Myeongjo", serif;
 }
 header.masthead .masthead-heading {
   font-size: 3.25rem;
   font-weight: 700;
   line-height: 3.25rem;
   margin-bottom: 2rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Nanum Myeongjo", serif;
 }
 
 @media (min-width: 768px) {
@@ -11263,6 +11263,7 @@ section#contact {
 }
 section#contact .section-heading {
   color: #fff;
+  
 }
 section#contact form#contactForm .form-group {
   margin-bottom: 1.5rem;
